# clmp

./: .gitignore  AUTHORS  CONTRIBUTING.md  DESCRIPTION  INSTALL.md  NAMESPACE  README.md  app.R  cmaes_initials.par  configure  configure.ac
R/: RcppExports.R  clmp.R  clockify.R  midpoint.R
c-cmaes/: Makefile.in
data/: structSIR.RData  test.nwk
man/: clmp.Rd  structSIR.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  actparcmaes.par  clmpR.c  cmaes.c  cmaes_interface.h  errcmaes.err  midpoint_help.cpp  mmpp.c  mmpp.h  newick_lexer.c  newick_lexer.l  newick_parser.c  newick_parser.y  tree.c  tree.h  util.c  util.h
